tests/ui/error-codes/E0389.stderr
error[E0594]: cannot assign to `fancy_ref.num`, which is behind a `&` reference
  --> $DIR/E0389.rs:8:5
   |
LL |     fancy_ref.num = 6;
   |     ^^^^^^^^^^^^^^^^^ `fancy_ref` is a `&` reference, so the data it refers to cannot be written
   |
help: consider changing this to be a mutable reference
   |
LL |     let fancy_ref = &mut (&mut fancy);
   |                      +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
